  * Complete rewrite (and renumbering) of sections 9.1 and 9,2
  * This time *really* include the HTML version of the FHS
  * Added doc-base support for all of the HTML files
  * Added several more files to the byhand list and rewrote chunks of
    debian/rules to do this
  * Add patched versions of debiandoc-sgml stuff to source package until
    patches are incorporated upstream

 -- 

debian-policy (3.5.4.0) unstable; urgency=low

  * [ACCEPTED 2/4/01] /var/mail and /var/spool/mail  closes: Bug#42052
  * [AMENDMENT 26/04/2001] include Perl Policy       closes: Bug#83977
  * Also incorporates all the improvements that Julian has made to to the
    grammar and flow of the policy manual. The following are mostly
    Julian's fixes:
  * Removed reference to non-extant dpkg documentation
  * Fixed the confusing self referential language.   closes: Bug#85503
  * Correct ambiguous kanguage about declaring build dependencies.
                                                     closes: Bug#86436
  * Improved the woding of the footnote about shlibdeps.
                                                     closes: Bug#87233

 -- Manoj Srivastava <srivasta@debian.org>  Sat, 28 Apr 2001 13:30:21 -0500

debian-policy (3.5.3.0) unstable; urgency=low

  * Removed recommendation on packaging-manual
                                    closes: Bug#86507, #93620, #93705
  * Also now Conflicts and Replaces packaging-manual
  * Remove FSSTND from binary package, although retain it in the source
    package for the time being
  * Get the version.ent non-compression thingy right this time!
  * Also install FHS stuff byhand (as requested by webmasters)
  * Corrected GPL name and location         closes: Bug#88788, #93047
  * Correct bug severities                          closes: Bug#91276
  * Correct typos etc. in policy-process
  * Rename all .text files as .txt
  * Fixed the "to to" typo in policy                 closes: Bug#87007