@@ -54,7 +54,7 @@ picking your way through this list.
 
 <pre>
 3.5.4.0                    Apr 01
-  Policy Manual:
+
      - The system-wide mail directory is now /var/mail, no longer
        /var/spool/mail.  Any packages accessing the mail spool should
        access it via /var/mail and include a suitable Depends field;
@@ -65,36 +65,35 @@ picking your way through this list.
 
 
 3.5.3.0                    Apr 01
-  Policy Manual:
+
      - Build-Depends arch syntax has been changed to be less
        ambiguous. This should not affect any current packages [7.1]
-     - Examples and templates should now live in
-       /usr/share/&lt;package&gt; or /usr/lib/&lt;package&gt;, with
+     - Examples and templates files for use by scripts should now live
+       in /usr/share/&lt;package&gt; or /usr/lib/&lt;package&gt;, with
        symbolic links from /usr/share/doc//&lt;package&gt;/examples as
        needed [11.7.3]
 
 
 3.5.2.0                    Feb 01
-  Policy Manual:
+
      - X app-defaults directory has moved from
-      /usr/X11R6/lib/X11/app-defaults to /etc/X11/app-defaults [12.8]
+       /usr/X11R6/lib/X11/app-defaults to /etc/X11/app-defaults [12.8]
 
 
 3.5.1.0                    Feb 01
-  Policy Manual:
+
      - dpkg-shlibdeps now uses objdump, so shared libraries have to be
        run through dpkg-shlibdeps as well as executables [9.1]
 
 
 3.5.0.0                    Jan 01
-  Policy Manual:
+
      - Font packages for the X Window System must now declare a
        dependency on xutils (>= 4.0.2) [12.8]
 
 
 3.2.1.1                    Jan 01
 
-  Policy Manual:
      - Daemon startup scripts in /etc/init.d/ should not contain
        modifiable parameters; these should be moved to a file in
       /etc/default/; see [10.3.2] for details
@@ -179,7 +178,6 @@ picking your way through this list.
 
 3.0.1.0                    Jul 99
 
-  Policy Manual:
     -  Added the clarification that the .la files are essential for the
        packages using libtool's libltdl library, in which case the
        .la files must go in the run-time library package [11.2]
@@ -187,7 +185,6 @@ picking your way through this list.
 
 3.0.0.0                    Jun 99
 
-  Policy Manual:
     - Debian formally moves from the FSSTND to the FHS. This is a
       major change, and the implications of this move are probably
       not all known. [10.1]
